<resources>
    <string name="app_name">Aquasense</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="string_home_desc">Berikut ini ada beberapa cara untuk penanggulangan bencana banjir : \n1. Membuat fungsi sungai dan selokan dapat bekerja dengan baik. Sungai dan selokan adalah tempat aliran air sehingga jangan sampai tercemari dengan sampah atau menjadi tempat pembuangan sampah yang akhirnya menyebabkan sungai dan selokan menjadi tersumbat.
        \n2. Melakukan reboisasi tanaman khususnya jenis tanaman dan pepohonan yang dapat menyerap air dengan cepat.
        \n3. Memperbanyak dan menyediakan lahan terbuka untuk membuar lahan hijau untuk penyerapan air.
        \n4. Berhenti membangun perumahan di tepi sungai, karena akan mempersempit sungai dan sampah rumah juga akan masuk sungai.
        \n5. Berhenti membangun gedung-gedung tinggi dan besar, karena akan menyebabkan bumi ini akan semakin sulit menahan bebanya dan membuat permukaan tanah turun. Hindari penebangan pohon-pohon di hutan secara liar dan juga di bantaran sungai, karena pohon berperan penting untuk pencegahan banjir. Sebenarnya menebang pohon tidak dilarang bila kita akan menanam kembali pohon tersebut dan tidak membiarkan hutan menjadi gundul. Dengan melakukan cara penanggulangan banjir tersebut kita dapat mencegah bencana banjir. Karena selama ini pemerintah pun telah bekerja keras untuk mencegah terjadinya banjir, tetapi semua masyarakat pun harus mendukung agar semua bisa teratasi dengan baik.</string>
    <string name="title_activity_perkiraan_cuaca_detail">PerkiraanCuacaDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masuk">Silahkan masukkan informasi login anda</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="buat_akun">Buat Akun Anda</string>
    <string name="segera">Ayo, segera daftarkan akunmu</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="login_email">Email</string>
    <string name="login_password">Kata Sandi</string>
    <string name="daftar_google">Masuk Dengan Google</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Unggah Gambar</string>
    <string name="kirim_lokasi">Kirim Lokasi</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="yes">Ya</string>
    <string name="uri_not_found">Tidak ada file atau direktori</string>
    <string name="error_image_alert">Gambar Tidak Ditemukan</string>
    <string name="image_upload_failed">Gagal Mengunggah Gambar</string>
    <string name="failed_alert">Gagal Diunggah</string>
    <string name="ini_text">ini teks</string>
    <string name="ini_description">ini deskripsi</string>
    <string name="cancel">Batalkan</string>
    <string name="logout">Keluar</string>
    <string name="logout_konfirmasi">Apakah Anda Yakin Ingin Keluar?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>